bpk-lib/crates/core/tests/ui/es_cache_version_not_u64.stderr
error: expected integer literal
  --> tests/ui/es_cache_version_not_u64.rs:11:50
   |
11 | #[batpak(input = JsonValueInput, cache_version = "not-a-number")]
   |                                                  ^^^^^^^^^^^^^^
